--- a/MameToppleApi/MameVue/public/Game.html
+++ b/MameToppleApi/MameVue/public/Game.html
@@ -25,17 +25,23 @@
             <div class="row text-center">
                 <div class="col-12 col-md-12 game-content text-center">
                     <div class="row">
-                        <div class="col-3 col-md-3 players location-left">
+                        <div class="col-2 col-md-2 players location-left">
                             <div class="user-icon user-left"></div>
                             <div class="cards-panel cards-panel-lr"></div>
                         </div>
-                        <div class="col-6 col-md-6 center-content">
+                        <div class="col-8 col-md-8 center-content">
                             <div class="players location-top m-auto">
-                                <div class="user-icon user-top"></div>
                                 <div class="cards-panel cards-panel-ud"></div>
+                                <div class="user-icon user-top"></div>
                             </div>
                             <div class="game-board">
-                                <div class="topple-list"></div>
+                                <!-- #region mame-line 區域 -->
+                                <div class="mame-line">
+                                    <div class="mame-tiki mame-tiki-3"></div>
+                                    <div class="mame-tiki mame-tiki-2"></div>
+                                    <div class="mame-tiki mame-tiki-1"></div>
+                                </div>
+                                <!-- #endregion mame-line 區域 -->
                             </div>
                             <div class="players location-bottom m-auto">
                                 <div class="user-icon user-bottom"></div>
@@ -44,7 +50,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-3 col-md-3 players location-right">
+                        <div class="col-2 col-md-2 players location-right">
                             <div class="cards-panel cards-panel-lr"></div>
                             <div class="user-icon user-right"></div>
                         </div>
