--- a/MameToppleApi/MameVue/public/Game.html
+++ b/MameToppleApi/MameVue/public/Game.html
@@ -4,7 +4,7 @@
         <!-- Required meta tags -->
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-        <link rel="stylesheet" href="../src/assets/css/gameboard.css" />
+        <link rel="stylesheet" href="../src/assets/css/GameBoard.css" />
         <!-- Bootstrap CSS -->
         <link
             rel="stylesheet"
@@ -46,7 +46,12 @@
                             <div class="players location-bottom m-auto">
                                 <div class="user-icon user-bottom"></div>
                                 <div class="cards-panel cards-panel-ud">
-                                    <div class="mame-card"></div>
+                                    <div class="mame-card">
+                                        <div class="mame-card-wrapper">
+                                            <div class="mame-card-side is-active"></div>
+                                            <div class="mame-card-side mame-card-side-back"></div>
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -61,9 +66,14 @@
 
         <!-- Optional JavaScript -->
         <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-        <script
+        <!-- <script
             src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
             integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+            crossorigin="anonymous"
+        ></script> -->
+        <script
+            src="https://code.jquery.com/jquery-3.5.1.min.js"
+            integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
             crossorigin="anonymous"
         ></script>
         <script
@@ -76,5 +86,6 @@
             integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
             crossorigin="anonymous"
         ></script>
+        <script src="../src/assets/js/GameBoard.js"></script>
     </body>
 </html>
